# agent-kernel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: agent.py  cli.py  config.py  container.py  errors.py  hooks.py  logging_config.py  notifications.py  registry.py  tick_watcher.py  transcript.py  tty.py  types.py  watcher.py
src/tools/: __init__.py  awareness.py  schedule.py  terminal.py
tests/: Containerfile.test  conftest.py  test_config.py  test_errors.py  test_hooks.py  test_registry.py  test_schedule.py  test_terminal_tools.py  test_tick_watcher.py  test_tty.py  test_types.py
